app/styles/tailwind.css
/* ... */
.place-content-end {
  place-content: end;
}

.place-items-end {
  place-items: end;
}

.place-items-center {
  place-items: center;
}

.gap-7 {
  gap: 1.75rem;
}

.gap-4 {
  gap: 1rem;
}

.gap-2 {
  gap: 0.5rem;
}

.rounded-full {
  border-radius: 9999px;
}

.rounded-sm {
  border-radius: 0.125rem;
}

.border {
  border-width: 1px;
}

.border-white {
  --tw-border-opacity: 1;
  border-color: rgb(255 255 255 / var(--tw-border-opacity));
}

.bg-slate-800 {
  --tw-bg-opacity: 1;
  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
}

.bg-orange-400 {
  --tw-bg-opacity: 1;
  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
}

.bg-blue-400 {
  --tw-bg-opacity: 1;
  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
}

.bg-gradient-to-b {
  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
}

.from-purple {
  --tw-gradient-from: #2D2D4E;
  --tw-gradient-to: rgb(45 45 78 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.to-gray {
  --tw-gradient-to: #07070D;
}

.p-2 {
  padding: 0.5rem;
}

.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.pt-16 {
  padding-top: 4rem;
}

.align-middle {
  vertical-align: middle;
}

.font-mono {
  font-family: IBM Plex Mono;
}

.font-header {
  font-family: Plus Jakarta Sans;
}

.font-\[\'Archivo_Black\'\] {
  font-family: 'Archivo Black';
}

.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-4xl {
  font-size: 2.25rem;
  line-height: 2.5rem;
}

.text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.font-bold {
  font-weight: 700;
}

.text-primary {
  --tw-text-opacity: 1;
  color: rgb(38 240 241 / var(--tw-text-opacity));
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-secondary-text {
  --tw-text-opacity: 1;
  color: rgb(190 189 188 / var(--tw-text-opacity));
}

.opacity-10 {
  opacity: 0.1;
}

.hover\:cursor-pointer:hover {
  cursor: pointer;
}

.hover\:border-primary:hover {
  --tw-border-opacity: 1;
  border-color: rgb(38 240 241 / var(--tw-border-opacity));
}

.hover\:text-secondary-text:hover {
  --tw-text-opacity: 1;
  color: rgb(190 189 188 / var(--tw-text-opacity));
}

.hover\:text-primary:hover {
  --tw-text-opacity: 1;
  color: rgb(38 240 241 / var(--tw-text-opacity));
}
/* ... */

